Mint-Y: Fix top and bottom clipping of the window close button in client-decorated firefox.

--- a/src/Mint-Y/gtk-3.0/sass/_common.scss
+++ b/src/Mint-Y/gtk-3.0/sass/_common.scss
@@ -3117,7 +3117,7 @@ headerbar,
     padding-top: 0px;                       // already handled by the titlebar-padding
     padding-bottom: 0px;
     min-width: 22px;
-    min-height: 0;
+    min-height: 22px;
     margin: 0;
   }
 
